{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 320,
  "lineage": "f676c80f-fa91-abcc-c130-7770f66db3a9",
  "resources": [
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03fbf6594dcdc73d2",
            "arn": "arn:aws:ec2:us-west-1:914947747396:elastic-ip/eipalloc-03fbf6594dcdc73d2",
            "domain": "vpc",
            "id": "eipalloc-03fbf6594dcdc73d2",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-18-144-137-83.us-west-1.compute.amazonaws.com",
            "public_ip": "18.144.137.83",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:914947747396:internet-gateway/igw-004cea30280ed1438",
            "id": "igw-004cea30280ed1438",
            "owner_id": "914947747396",
            "tags": {
              "Name": "magoya igw"
            },
            "tags_all": {
              "Name": "magoya igw"
            },
            "vpc_id": "vpc-0f9768dc1da41e74a"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.magoya_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03fbf6594dcdc73d2",
            "association_id": "eipassoc-0c72fe6101476764a",
            "connectivity_type": "public",
            "id": "nat-0e718ca850433c209",
            "network_interface_id": "eni-0c3b7828e030e4058",
            "private_ip": "10.0.1.13",
            "public_ip": "18.144.137.83",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0857f20a489fd618c",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_internet_gateway.igw",
            "module.eks.module.vpc.aws_subnet.public_subnet",
            "module.eks.module.vpc.aws_vpc.magoya_vpc",
            "module.eks.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:914947747396:route-table/rtb-0a4d415e7a2ae13f2",
            "id": "rtb-0a4d415e7a2ae13f2",
            "owner_id": "914947747396",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-004cea30280ed1438",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f9768dc1da41e74a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_internet_gateway.igw",
            "module.eks.module.vpc.aws_vpc.magoya_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0003e33c4b8efe0cb",
            "route_table_id": "rtb-0a4d415e7a2ae13f2",
            "subnet_id": "subnet-0857f20a489fd618c"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_internet_gateway.igw",
            "module.eks.module.vpc.aws_route_table.route_table",
            "module.eks.module.vpc.aws_subnet.public_subnet",
            "module.eks.module.vpc.aws_vpc.magoya_vpc",
            "module.eks.module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e42b1789ceac69b",
            "route_table_id": "rtb-0a4d415e7a2ae13f2",
            "subnet_id": "subnet-017541057607c5e01"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_internet_gateway.igw",
            "module.eks.module.vpc.aws_route_table.route_table",
            "module.eks.module.vpc.aws_subnet.public_subnet",
            "module.eks.module.vpc.aws_vpc.magoya_vpc",
            "module.eks.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:914947747396:subnet/subnet-0ddd4108c2803d4a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddd4108c2803d4a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "914947747396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f9768dc1da41e74a"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.magoya_vpc",
            "module.eks.module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:914947747396:subnet/subnet-0e29a05d625afb719",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e29a05d625afb719",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "914947747396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f9768dc1da41e74a"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.magoya_vpc",
            "module.eks.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:914947747396:subnet/subnet-0857f20a489fd618c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0857f20a489fd618c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "914947747396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f9768dc1da41e74a"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.magoya_vpc",
            "module.eks.module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:914947747396:subnet/subnet-017541057607c5e01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017541057607c5e01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "914947747396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f9768dc1da41e74a"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.magoya_vpc",
            "module.eks.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "magoya_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:914947747396:vpc/vpc-0f9768dc1da41e74a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-098ac066c50a5c62a",
            "default_route_table_id": "rtb-00abfd40891f3ddb2",
            "default_security_group_id": "sg-077c4877af579e8b0",
            "dhcp_options_id": "dopt-09ea6466998fc88d3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f9768dc1da41e74a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00abfd40891f3ddb2",
            "owner_id": "914947747396",
            "tags": {
              "Name": "magoya vpc"
            },
            "tags_all": {
              "Name": "magoya vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fc67302a036f32e8",
            "arn": "arn:aws:ec2:us-west-1:914947747396:elastic-ip/eipalloc-0fc67302a036f32e8",
            "domain": "vpc",
            "id": "eipalloc-0fc67302a036f32e8",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-13-57-175-160.us-west-1.compute.amazonaws.com",
            "public_ip": "13.57.175.160",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:914947747396:internet-gateway/igw-025547b35aff2b187",
            "id": "igw-025547b35aff2b187",
            "owner_id": "914947747396",
            "tags": {
              "Name": "magoya igw"
            },
            "tags_all": {
              "Name": "magoya igw"
            },
            "vpc_id": "vpc-0261039c591d5ccd6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.magoya_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fc67302a036f32e8",
            "association_id": "eipassoc-084ead89869b92e3e",
            "connectivity_type": "public",
            "id": "nat-0f712ae4c65489e2c",
            "network_interface_id": "eni-0a9d6dba7e1c302ff",
            "private_ip": "10.0.1.239",
            "public_ip": "13.57.175.160",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02be502de279d5a26",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.magoya_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:914947747396:route-table/rtb-047f25d9e0c007357",
            "id": "rtb-047f25d9e0c007357",
            "owner_id": "914947747396",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-025547b35aff2b187",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0261039c591d5ccd6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.magoya_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094287a632674132a",
            "route_table_id": "rtb-047f25d9e0c007357",
            "subnet_id": "subnet-02be502de279d5a26"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.magoya_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c2d2278470f238f",
            "route_table_id": "rtb-047f25d9e0c007357",
            "subnet_id": "subnet-0d96a498ff01cc8ac"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.magoya_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:914947747396:subnet/subnet-0edc1055e1b37438a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edc1055e1b37438a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "914947747396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0261039c591d5ccd6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.magoya_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:914947747396:subnet/subnet-082406fcc956ff77c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082406fcc956ff77c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "914947747396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0261039c591d5ccd6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.magoya_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:914947747396:subnet/subnet-02be502de279d5a26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02be502de279d5a26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "914947747396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0261039c591d5ccd6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.magoya_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:914947747396:subnet/subnet-0d96a498ff01cc8ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d96a498ff01cc8ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "914947747396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0261039c591d5ccd6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.magoya_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "magoya_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:914947747396:vpc/vpc-0261039c591d5ccd6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ec0ee7d06cf35603",
            "default_route_table_id": "rtb-04435dd3429396740",
            "default_security_group_id": "sg-030144f9d68115080",
            "dhcp_options_id": "dopt-09ea6466998fc88d3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0261039c591d5ccd6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04435dd3429396740",
            "owner_id": "914947747396",
            "tags": {
              "Name": "magoya vpc"
            },
            "tags_all": {
              "Name": "magoya vpc"
            }
          }
        }
      ]
    }
  ]
}